fixed bug where sidepages are visible while images load for webtoons

--- a/css/navImage.css
+++ b/css/navImage.css
@@ -8,9 +8,12 @@
 #navImage {
   display: grid;
   grid-auto-flow: column;
-  background-image: url("../img/side.webp");
   background-size: contain;
   pointer-events: none;
+}
+
+body.manga #navImage {
+  background-image: url("../img/side.webp");
 }
 
 body.book #navImage {
